<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MNO-tracker</string>
    <string name="services">Services</string>
    <string name="settings">Settings</string>
    <string name="other_settings">Additional</string>
    <string name="about">About</string>
    <string name="notify_only_bad_news">Only Bad News Notifications</string>
    <string name="notify_only_bad_news_summary">Price change, new subscription to a paid service, etc.</string>
    <string name="dark_theme_on">Dark Theme</string>
    <string name="only_via_wifi">Wi-Fi Only</string>
    <string name="telemetry_on">Send Telemetry</string>
    <string name="telemetry_on_summary">Help developers with improving the app</string>
    <string name="accounts">Accounts</string>
    <string name="new_account">New Account</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="off">Off</string>
    <string name="your_phone_number">Phone Number</string>
    <string name="your_password">Password</string>
    <string name="login">Login / Sign Up</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="megafon">MegaFon</string>
    <string name="mts">MTS</string>
    <string name="beeline">Beeline</string>
    <string name="tele2">Tele2</string>
    <string name="delete_account_confirmation">Remove account %s?</string>
</resources>
