<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="only_bad_news"
        android:title="@string/notify_only_bad_news"
        android:summary="@string/notify_only_bad_news_summary"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="dark_theme_on"
        android:title="@string/dark_theme_on"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="only_via_wifi"
        android:title="@string/only_via_wifi"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="telemetry_on"
        android:title="@string/telemetry_on"
        android:summary="@string/telemetry_on_summary"
        android:defaultValue="true"/>
</PreferenceScreen>
