<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
    <EditText
        android:id="@+id/edit_phone_number"
        android:inputType="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_phone_number"
        android:singleLine="true"
        android:layout_gravity="center_vertical|center_horizontal"/>
        <!-- android:inputType="textPassword" -->
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        android:singleLine="true"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_megafon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/megafon"
            android:onClick="onMnoClicked"/>
        <RadioButton android:id="@+id/radio_mts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mts"
            android:onClick="onMnoClicked"/>
        <RadioButton android:id="@+id/radio_beeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beeline"
            android:onClick="onMnoClicked"/>
        <RadioButton android:id="@+id/radio_tele2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tele2"
            android:onClick="onMnoClicked"/>
    </RadioGroup>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/login"/>
        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/signup"/>
    </LinearLayout>
</LinearLayout>
